<?xml version="1.0"?>
<package>
  <name>sine_pub</name>
  <version>0.0.0</version>
  <description>The demo package that publishes sine of increasing x radians</description>

  <maintainer email="geoffrey.viola@asirobots.com">geoff</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
